<resources>
    <!-- App -->
    <string name="app_name">EduPapers</string>
    <string name="app_subtitle">Your Past Papers Companion</string>
    
    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_midterm">Midterm Papers</string>
    <string name="nav_finalterm">Final Term Papers</string>
    <string name="nav_downloads">Downloads</string>
    <string name="nav_settings">Settings</string>
    
    <!-- Actions -->
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="msg_search_hint">Search papers…</string>
    
    <!-- Messages -->
    <string name="msg_no_papers">No Papers Found</string>
    <string name="msg_no_papers_desc">There are no papers available at the moment. Please check back later.</string>
    <string name="msg_no_internet">No Internet Connection</string>
    <string name="dialog_retry">Retry</string>
    
    <!-- Settings -->
    <string name="settings_theme">Theme</string>
    <string name="settings_rate">Rate Us</string>
    <string name="settings_share">Share App</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_privacy">Privacy Policy</string>
    
    <!-- Theme -->
    <string name="theme_light">Light Theme</string>
    <string name="theme_dark">Dark Theme</string>
    
    <!-- Actions -->
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="action_open">Open</string>
    <string name="action_delete">Delete</string>
    <string name="action_info">Info</string>
    
    <!-- Messages -->
    <string name="msg_no_internet">No internet connection</string>
    <string name="msg_download_started">Download started</string>
    <string name="msg_download_complete">Download complete</string>
    <string name="msg_download_failed">Download failed</string>
    <string name="msg_search_hint">Search papers…</string>
    
    <!-- Dialog -->
    <string name="dialog_delete_title">Delete File</string>
    <string name="dialog_delete_message">Are you sure you want to delete this file?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    
    <!-- Content Description -->
    <string name="desc_app_logo">App Logo</string>
    <string name="desc_nav_drawer">Navigation Drawer</string>
    
    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
