<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
            
        <item
            android:id="@+id/nav_midterm"
            android:icon="@drawable/ic_assignment"
            android:title="@string/nav_midterm" />
            
        <item
            android:id="@+id/nav_finalterm"
            android:icon="@drawable/ic_assignment"
            android:title="@string/nav_finalterm" />
            
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_download"
            android:title="@string/nav_downloads" />
    </group>

    <item android:title="@string/nav_settings">
        <menu>
            <item
                android:id="@+id/nav_theme"
                android:icon="@drawable/ic_theme"
                android:title="@string/settings_theme" />
                
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_star"
                android:title="@string/settings_rate" />
                
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/settings_share" />
                
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/settings_feedback" />
                
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_privacy"
                android:title="@string/settings_privacy" />
        </menu>
    </item>
</menu>
